# ontology

./: .coderabbit.yaml  .dockerignore  .editorconfig  .gitignore  .markdownlint.yaml  .releaserc.yml  CHANGELOG.md  CNAME  Dockerfile  LICENSE-CODE  Makefile  README.md  collab-ai-zone-description.nq  collab-ai-zone-governance.nq  collab-ai-zone-governance.pl  crime-dataset-governance.pl  index.html  ipfs-digital-service-description.nq  shiro.ini
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  ontology_improvement.md  project_improvement.md
.github/gh-home/: index.html
.github/workflows/: build.yml  checks.yml  lint.yml  notify-draft.yml  notify-release.yml  publish.yml  release.yml  test.yml
docs/schemas/: credential-assertion.md  credential-dataset-description.md  credential-governance-text.md  credential-profile.md  (+2 more)
example/: ipfs.ttl
script/: .flake8  mypy.ini  pyproject.toml
script/cli/: cli.py  documentation.py  jsonld.py  markdown.py  nquads.py  rdf.py
script/cli/templates/: schema.md.j2  schema.md.jinja2  schemas.md.jinja2
src/: core.ttl  index.html  metadata-audit.ttl  metadata-dataset-general.ttl  metadata-dataspace-general.ttl  metadata-governance.ttl  metadata-service-general.ttl  metadata-zone-general.ttl  okp4.ttl  ontology.ttl  vocab-area.ttl  vocab-category-service.ttl  vocab-license.ttl  vocab-mediatype.ttl  vocab-topic.ttl
test/: credential-assertion.shacl.ttl  credential-profile.shacl.ttl  credential-proof-participation.shacl.ttl  dataset.ttl  governance.ttl  vocab.ttl  zone-membership.ttl
(+591 files in other folders)
