[tool.poetry]
name = "cli"
version = "0.1.0"
description = "CLI tool to generate the documentation for the OKP4 ontology"
authors = ["opensource-OKP4 <opensource@okp4.com>"]
license = "BSD 3-Clause License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jinja2 = "^3.1.6"
click = "^8.2.1"
rdflib = "^7.1.4"
mypy = "^1.17.0"
pyld = "^2.0.3"
requests = "^2.32.4"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.2.0"

[tool.poetry.scripts]
cli = "cli.cli:root"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
